--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,19 @@
-name: Deploy via ftp
 on: push
+name: 🚀 Deploy website on push
 jobs:
-  deploy:
-    name: Deploy
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Upload ftp
-      uses: sebastianpopp/ftp-action@releases/v2
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v2
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.3.2
       with:
-        host: ftp.1664532155313-sh.bigrock.in
-        user: bukant@bukant.in
+        server: ftp.1664532155313-sh.bigrock.in
+        username: bukant@bukant.in
         password: bukant_pass2022
-        localDir: "/"
-        remoteDir: "public_html/www/bukant.in/"
-        options: "--delete --asci"
+        port: 21
+        local-dir: ./
+        server-dir: public_html/www/bukant.in/
