--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
           user: "bukant@bukant.in"
           password: "bukant_pass2022"
           local_dir: "./"
-          remote_dir: "/public_html/www/bukant.in"
+          remote_dir: "/public_ftp"
           delete: "false"
           ftp_ssl_allow: "true"
