--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,34 @@
-name: CI -> Deploy to My website
+name: Staging Deploy
+
 on:
   push:
-    branches: main
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./
     steps:
-      - uses: actions/checkout@v2
-      # Here is the deployment action
-      - name: Upload via FTP
-        uses: airvzxf/ftp-deployment-action@latest
-        with:
-          server: "ftp.1664532155313-sh.bigrock.in"
-          user: "bukant@bukant.in"
-          password: "bukant_pass2022"
-          local_dir: "./"
-          remote_dir: "/public_ftp"
-          delete: "false"
-          ftp_ssl_allow: "true"
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 2
+
+    - name: Install Composer Dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest
+
+    - name: npm install
+      run: npm install
+
+    - name: npm run bundle
+      run: npm run bundle
+
+    - name: FTP Deploy
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
+      with:
+        ftp-server: ftp.1664532155313-sh.bigrock.in
+        ftp-username: bukant@bukant.in
+        ftp-password: bukant_pass2022
+        local-dir: ./
+        remote-dir: /public_html/www/bukant.in
